# dll-injection-api-hook.rs

./: Cargo.toml  README.md
call-dll-exe/: Cargo.toml
call-dll-exe/src/: main.rs
hook-dll/: Cargo.toml
hook-dll/src/: lib.rs
